[package]
name = "rust-arduino-helpers"
version = "0.1.0"
authors = ["Robert Forsman <git@thoth.purplefrog.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
#atmega-hal = {git="https://github.com/rahix/avr-hal", rev="f84c0dff774c2292bc932b670955165161ecc7d1", features=["atmega328p"]}

[dependencies.atmega-hal]
#git = "https://github.com/rahix/avr-hal"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
git = "https://github.com/mutantbob/avr-hal.git"
branch="2022-mar-ufmt-fix"
#path="../../vendor/avr-hal/mcu/atmega-hal"
features = ["atmega328p"]

[dependencies.arduino-hal]
#git = "https://github.com/rahix/avr-hal"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
git = "https://github.com/mutantbob/avr-hal.git"
branch="2022-mar-ufmt-fix"
#path="../../vendor/avr-hal/arduino-hal"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"


#[workspace]
#modules = [ "arduino-build-helpers", "rust-arduino-runtime" ]