[package]
name = "rust-arduino-helpers"
version = "0.1.0"
authors = ["Robert Forsman <git@thoth.purplefrog.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
board-selected=[]
atmega328p = [ "atmega-hal/atmega328p", "board-selected" ]
atmega2560 = [ "atmega-hal/atmega2560", "board-selected" ]

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"


#[workspace]
#modules = [ "arduino-build-helpers", "rust-arduino-runtime" ]