[package]
name = "rust-arduino-runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty="*"

[dependencies.avr-progmem]
version="0.2"
#git="https://github.com/Cryptjar/avr-progmem-rs.git"
#branch="v0.2"

[build-dependencies]
bindgen="*"
cc="*"
arduino-build-helpers = { path="../arduino-build-helpers"}
