[package]
name = "serial-println"
version = "0.1.0"
edition = "2018"

[features]
atmega328p = [ "arduino-hal/arduino-uno"]
atmega2560 = [ "arduino-hal/arduino-mega2560"]

[dependencies]
avr-device="*"
ufmt="*"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
